2010-04-11  Frank Lanitz  <frank@frank.uvena.de>

 * Enabling inserting label on pushing return after typing in label name.
 * Enabling inserting \usepackage{} on pushing return after typing in dialog.


2010-03-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add a menu entry for inserting font sizes to document


2010-03-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Insert a keybinding and a dialog to insert a \usepackage{} line to header.
   Still experimental.


2010-03-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add a very first attempt to support landscape on wizard. Output is
   far away from being good.


2010-01-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add an example spec file for creating rpm files.
   Thanks to Krzysztof Goliński and Dominic Hopf for efforts here.


2010-01-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Took over functionality to automatic close \begin{} and \begingroup{}
   from Geany core


2009-01-03  Frank Lanitz  <frank@frank.uvena.de>

 * Don't deactivate wizard icon if no document is open


2009-01-01  Frank Lanitz  <frank@frank.uvena.de>

 * Make text used for inserting references configurable.
   Please check documentation for details on how to do it.


2009-12-26  Frank Lanitz  <frank@frank.uvena.de>

 * Deactivate icons of toolbar, if no LaTeX document is open. Behavior
   can be deactivated via hidden pref.


2009-12-23  Frank Lanitz  <frank@frank.uvena.de>

 * Do only special character replacement in case of we really have
   an LaTeX file here.


2009-12-13  Frank Lanitz  <frank@frank.uvena.de>

 * Show geanyLaTeX inside plugin manager.


2009-10-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Replace also capital German umlauts.


2009-10-10 Frank Lanitz  <frank@frank(dot)uvena(dot)de>

 * Add a function to insert \ref{} and \pageref{} together when
   inserting a reference.


2009-09-13  Frank Lanitz  <frank@frank(dot)uvena(dot)de>
